@@ -12,7 +12,8 @@ Makefile
 Makefile.in
 libwesnoth-core.a
 libwesnoth.a
-revision-stamp
+revision_stamp
+revision_stamp.cpp
 tags
 test
 wmllint
