@@ -40,11 +40,7 @@ namespace game_config
 	const int gold_carryover_percentage = 80;
 	const bool gold_carryover_add = false;
 	const std::string version = VERSION;
-#ifdef SVNREV
-	const std::string svnrev = SVNREV;
-#else
-	const std::string svnrev = "";
-#endif
+	std::string svnrev = "";
 	bool debug = false, editor = false, ignore_replay_errors = false, mp_debug = false, exit_at_end = false, no_delay = false, disable_autosave = false;
 
 	std::string game_icon = "wesnoth-icon.png", game_title, game_logo, title_music;
