@@ -18,6 +18,7 @@ class config;
 
 #include "color_range.hpp"
 #include "tstring.hpp"
+#include "revision_stamp.hpp"
 
 #include <string>
 #include <vector>
@@ -34,7 +35,7 @@ namespace game_config
 	extern int kill_experience;
 	extern unsigned lobby_refresh;
 	extern const std::string version;
-	extern const std::string svnrev;
+	extern std::string svnrev;
 
 	//! Default percentage gold carried over to the next scenario.
 	extern const int gold_carryover_percentage;
