@@ -47,6 +47,7 @@ Version 1.3.14+svn:
    * fixed adjacent units to update if unit affects them
    * converted NO_MAP_DATA to new map format
    * fixed unchecked vector access
+   * made SVNREV not to recompile all everytime
    * make sure the python campaign client list shows a space between the 
      headers if the size of the column is smaller than the header (eg uploads)
    * make sure a unit with more hitpoints than its maximum doesn't terminate
